plugins {
    id 'org.springframework.boot' version '3.0.1'
    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
    id 'java'

    // lint - spotless
    id "com.diffplug.spotless" version "6.8.0"
}

apply from: './tasks/install-git-hooks.gradle'
apply from: './tasks/set-git-commit-template.gradle'

//apply from: './tasks/docs-task.gradle'


group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //OAuth - security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
    //OAuth jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //okhttp
    implementation 'com.squareup.okhttp3:okhttp:4.9.1'

    //dotenv
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

//	runtimeOnly 'com.h2database:h2'
    runtimeOnly 'mysql:mysql-connector-java'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('compileJava'){
    dependsOn 'spotlessApply'
}

allprojects {
    apply from: rootProject.rootDir.toString() + '/tasks/formatting-task.gradle'

    repositories {
        mavenCentral()
    }
}
